--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio | Kgs Abdul Fatah Revaldo</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+</head>
+<body>
 
+<nav class="navbar">
+    <div class="nav-container">
+        <div class="logo">aldo</div>
+
+        <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+
+        <div class="menu-toggle" id="menu-toggle">
+            ☰
+        </div>
+    </div>
+</nav>
+
+
+<header class="hero">
+    <video autoplay muted loop playsinline class="bg-video">
+        <source src="assets/background.mp4" type="video/mp4">
+        Browser Anda tidak mendukung video.
+    </video>
+
+    <div class="hero-overlay"></div>
+
+    <div class="hero-content">
+        <h1>Kgs Abdul Fatah Revaldo</h1>
+        <p>Computer Systems Student • cybersecurity Enthusiast • Frontend Enthusiast</p>
+    </div>
+</header>
+
+<main>
+    <section id="about" class="section">
+        <h2>About Me</h2>
+        <p>
+            Mahasiswa aktif di Universitas Sriwijaya, Fakultas Ilmu Komputer, Progam Studi Sistem Komputer 2024.
+            Dengan minat tinggi untuk mempelajari dan mengembangkan kemampuan dalam CyberSecurity. Memiliki
+            kepribadian yang bekerja keras, disiplin, dan bertanggung jawab atas apa yang sudah menjadi kewajiban.
+        </p>
+    </section>
+
+    <section id="skills" class="section">
+        <h2>Skills</h2>
+        <div class="skills">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+            <span>Design Grafis</span>
+            <span>Web Design</span>
+            <span>Python</span>
+            <span>Linux</span>
+            <span>CyberSecurity & Tools</span>
+        </div>
+    </section>
+
+    <section id="projects" class="section">
+        <h2>Projects</h2>
+        <div class="projects">
+            <div class="card">
+                <h3>Real-Time Intrusion Detection System (IDS)</h3>
+                <p>Membangun IDS real-time yang mendeteksi SYN flood, port scanning, dan ping flood. Menampilkan grafik &
+                    alert secara real-time melalui web dashboard. Termasuk sistem logging dan traffic analysis otomatis.
+                    GitHub: github.com/Natlane/Real-Time-Intrusion-Detection-System-IDS-Dashboard</p>
+            </div>
+            <div class="card">
+                <h3>CTF Competition</h3>
+                <p>Berpartisipasi sebagai anggota tim dalam lomba Cyber Security Capture The Flag (CTF) tingkat nasional
+                    Srifoton 2025. Menghadapi kategori web exploitation, forensics, cryptography, dan reverse engineering</p>
+            </div>
+            <div class="card">
+                <h3>Website CRUD (2024)</h3>
+                <p>Membangun website CRUD sederhana dan halaman statis yang layak dijadikan template.</p>
+            </div>
+            <div class="card">
+                <h3>Proxmox Virtualization – Server System Setup (2025)</h3>
+                <p>Membuat server dengan container untuk web server, DNS, dan database.</p>
+            </div>
+            <div class="card">
+                <h3>Project Clustering – Data Mining (2025)</h3>
+                <p>Melakukan clustering pada data menggunakan algoritma K-Means dan DBSCAN untuk mengelompokkan data berdasarkan kesamaan karakteristik.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="section">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:kgsabdulfatahr@gmail.com">kgsabdulfatahr@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/Natlane" target="_blank">github.com/Natlane</a></p>
+    <p>GitHub: <a href="https://github.com/AIdM1n" target="_blank">github.com/AIdM1n</a></p>
+</section>
+</main>
+
+<footer>
+    <p>© 2025 Kgs Abdul Fatah Revaldo</p>
+</footer>
+
+<script src="script.js"></script>
+</body>
+</html>
